PYIC-8381: update endpoint based on schema updates - update endpoint from GET to POST - add new request body - add new response attributes - rename functions/handlers to match endpoint type
