# di-ipv-sis-stub/lambdas/src/handlers/sisHandler.ts
@@ -1,5 +1,9 @@
 import { APIGatewayProxyEvent, APIGatewayProxyResultV2 } from "aws-lambda";
-import { InvalidAccessToken, InvalidAuthHeader } from "../domain/exceptions";
+import {
+  InvalidAccessToken,
+  InvalidAuthHeader,
+  InvalidRequestBody,
+} from "../domain/exceptions";
 import { getUserIdentity } from "../services/sisService";
 import { buildApiResponse } from "../utils/apiResponseBuilder";
 import {
@@ -13,7 +17,7 @@ import { getUserIdFromBearerToken } from "../utils/tokenVerifier";
 
 const AUTHORISATION_HEADER = "Authorization";
 
-export const getUserIdentityHandler = async (
+export const postUserIdentityHandler = async (
   event: APIGatewayProxyEvent,
 ): Promise<APIGatewayProxyResultV2> => {
   console.info("------------Processing GET user-identity request------------");
@@ -30,6 +34,8 @@ export const getUserIdentityHandler = async (
       return buildApiResponse(400, buildBadRequestResponse("Missing user id"));
     }
 
+    validateUserIdentityRequestBody(event);
+
     const userIdentity = await getUserIdentity(userId);
 
     if (!userIdentity) {
@@ -39,6 +45,10 @@ export const getUserIdentityHandler = async (
     return buildApiResponse(200, userIdentity);
   } catch (e) {
     console.error(e);
+    if (e instanceof InvalidRequestBody) {
+      return buildApiResponse(400, buildBadRequestResponse(e.message));
+    }
+
     if (e instanceof InvalidAuthHeader) {
       return buildApiResponse(401, buildUnauthorisedResponse());
     }
@@ -48,5 +58,25 @@ export const getUserIdentityHandler = async (
     }
 
     return buildApiResponse(500, buildServerErrorResponse());
+  }
+};
+
+const validateUserIdentityRequestBody = (event: APIGatewayProxyEvent) => {
+  console.info("---Parsing user identity request body---");
+
+  if (!event.body) {
+    throw new InvalidRequestBody("Missing request body");
+  }
+
+  const requestBody = JSON.parse(event.body);
+
+  if (!requestBody.vtr || requestBody.vtr.length === 0) {
+    throw new InvalidRequestBody("Missing vtr in request body");
+  }
+
+  if (!requestBody.govukSigninJourneyId) {
+    throw new InvalidRequestBody(
+      "Missing govukSigninJourneyId in request body",
+    );
   }
 };
